--- a/gitops/apps/unifi-network-application/configmap-mongo-init.yaml
+++ b/gitops/apps/unifi-network-application/configmap-mongo-init.yaml
@@ -1,6 +1,7 @@
 ---
-# ConfigMap: post-init script to grant 'unifi' dbOwner on 'unifi_stat'
+# ConfigMap: init script to create 'unifi' user and grant dbOwner on 'unifi_stat'
 # This is a hacky workaround, Ubiquiti, do better.
+# Note: Scripts in /docker-entrypoint-initdb.d only run on first initialization
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -9,15 +10,31 @@ metadata:
 data:
   zzz-grant-unifi-stat.sh: |
     #!/bin/bash
-    echo "[INFO] Granting 'unifi' user dbOwner on 'unifi_stat'..."
-    echo "[INFO] Running as user: $(id -u):$(id -g)"
-    ls -la /bitnami/mongodb || true
-
-    mongo --username "${MONGODB_ROOT_USER}" --password "${MONGODB_ROOT_PASSWORD}" <<EOF
-      use unifi
-      db.grantRolesToUser("unifi", [
+    set -e
+    echo "[INFO] Creating 'unifi' user and granting dbOwner on 'unifi_stat'..."
+    
+    # Get root password from environment
+    ROOT_USER="${MONGO_INITDB_ROOT_USERNAME:-root}"
+    ROOT_PASS="${MONGO_INITDB_ROOT_PASSWORD}"
+    UNIFI_PASS="${MONGO_INITDB_ROOT_PASSWORD}"
+    
+    # Create unifi user and grant permissions
+    # This runs during MongoDB initialization (before auth is enabled)
+    # Use mongo (not mongosh) for MongoDB 4.4.10
+    mongo --quiet <<EOF
+    use unifi
+    
+    // Create the unifi user
+    db.createUser({
+      user: "unifi",
+      pwd: "${UNIFI_PASS}",
+      roles: [
+        { role: "dbOwner", db: "unifi" },
         { role: "dbOwner", db: "unifi_stat" }
-      ]);
+      ]
+    });
+    print("[INFO] Created 'unifi' user with dbOwner on 'unifi' and 'unifi_stat'");
     EOF
-    echo "[INFO] Done granting dbOwner on unifi_stat."
+    
+    echo "[INFO] Done setting up 'unifi' user."
 
