--- a/gitops/apps/unifi-network-application/deployment-mongo.yaml
+++ b/gitops/apps/unifi-network-application/deployment-mongo.yaml
@@ -1,5 +1,5 @@
 ---
-# MongoDB Deployment (Bitnami container)
+# MongoDB Deployment (Official MongoDB container)
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -17,7 +17,7 @@ spec:
     spec:
       initContainers:
         - name: fix-permissions
-          image: bitnami/mongodb:4.4.10
+          image: mongo:4.4.10
           securityContext:
             runAsUser: 0
             runAsGroup: 0
@@ -27,55 +27,45 @@ spec:
             - -c
             - |
               echo "[DEBUG] fix-permissions initContainer started as user $(id -u):$(id -g)."
-              echo "[DEBUG] Current ownership in /bitnami/mongodb:"
-              ls -la /bitnami/mongodb || true
+              echo "[DEBUG] Current ownership in /data/db:"
+              ls -la /data/db || true
 
               echo "[DEBUG] Setting everything wide open with chown/chmod."
-              chown -R root:root /bitnami/mongodb || true
-              chmod -R 0777 /bitnami/mongodb || true
+              chown -R mongodb:mongodb /data/db || true
+              chmod -R 0755 /data/db || true
 
               echo "[DEBUG] Post-chown/chmod listing:"
-              ls -la /bitnami/mongodb
+              ls -la /data/db
               echo "[DEBUG] fix-permissions complete. Next container..."
           volumeMounts:
             - name: mongo-data
-              mountPath: /bitnami/mongodb
+              mountPath: /data/db
 
       containers:
         - name: mongo
-          image: bitnami/mongodb:4.4.10
+          image: mongo:4.4.10
           imagePullPolicy: IfNotPresent
           securityContext:
-            runAsUser: 0
-            runAsGroup: 0
-            privileged: true
+            runAsUser: 999
+            runAsGroup: 999
+            fsGroup: 999
           env:
-            - name: BITNAMI_DEBUG
-              value: "true"
-            - name: MONGODB_DATABASE
-              value: "unifi"
-            - name: MONGODB_USERNAME
-              value: "unifi"
-            - name: MONGODB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: unifi-mongo-credentials
-                  key: password
-
-            - name: MONGODB_ROOT_USER
+            - name: MONGO_INITDB_ROOT_USERNAME
               value: "root"
-            - name: MONGODB_ROOT_PASSWORD
+            - name: MONGO_INITDB_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: unifi-mongo-credentials
                   key: password
+            - name: MONGO_INITDB_DATABASE
+              value: "unifi"
 
-            - name: ALLOW_EMPTY_PASSWORD
-              value: "no"
+          args:
+            - --bind_ip_all
 
           volumeMounts:
             - name: mongo-data
-              mountPath: /bitnami/mongodb
+              mountPath: /data/db
             - name: mongo-init-scripts
               mountPath: /docker-entrypoint-initdb.d
               readOnly: true
